# elderly-livekit-server-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dispatch-rule.json  main.py  pyproject.toml  requirements.txt
agents/: companion_agent.py  onboarding_agent.py
lib/: n8n.py
prompts/: __init__.py  system.txt
prompts/skills/: adaptive_behavior.txt  care_detection.txt  cognitive_games.txt  family_connection.txt  interactive_storytelling.txt  legacy_storytelling.txt  memory_vault.txt  mood_checkins.txt  movie_recommendations.txt  news_media.txt  proactive_companion.txt  reminders.txt  scam_protection.txt
workflows/: elderly-companion.json
